--- a/templates/author/index.html.twig
+++ b/templates/author/index.html.twig
@@ -13,6 +13,7 @@
     <td>{{author.id}}</td>
     <td>{{author.username}}</td>
     <th>{{author.email}}</th>
+    <td>{{author.NbBook}}</td>
     <td><a href='{{ path ('app_deleteAuthor' , { 'id':author.id } ) }}'>delete</a><td>
     <td><a href='{{ path ('pp_updateAuthor' , { 'id':author.id } ) }}'>update</a><td>
     
